[package]
name = "data-anchor-prover-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
# External dependencies
sp1-derive = { workspace = true }
sp1-zkvm = { workspace = true }

# Locals
data-anchor-proofs = { workspace = true }
