[package]
name = "data-anchor-data-correctness-verifier"
description = "The on-chain verifier for verifying blober proofs."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "data_anchor_data_correctness_verifier"

[features]
default = [ "sp1" ]
sp1 = [ "data-anchor-blober/sp1" ]
cpi = [ "data-anchor-blober/cpi", "no-entrypoint" ]
no-entrypoint = [ "data-anchor-blober/no-entrypoint" ]
no-idl = [ "data-anchor-blober/no-idl" ]
no-log-ix-name = [ "data-anchor-blober/no-log-ix-name" ]
idl-build = [ "anchor-lang/idl-build", "data-anchor-blober/idl-build" ]

[dependencies]
# Solana & Agave
anchor-lang = { workspace = true }

# Locals
data-anchor-blober = { workspace = true, default-features = false, features = [
  "no-entrypoint",
  "cpi",
] }
